<resources>
  <string name="app_name">Plucky Wallet</string>
  <string name="icon">icon</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">login</string>
  <string name="home">HOME</string>
  <string name="network">NETWORK</string>
  <string name="info">INFO</string>
  <string name="upgrade">UPGRADE</string>
  <string name="dollar">$</string>
  <string name="zero">0</string>
  <string name="doge">DOGE</string>
  <string name="example_doge">99.99</string>
  <string name="history_lot">History Lot</string>
  <string name="income_doge">Income Doge</string>
  <string name="outgo_doge">Outgo Doge</string>
  <string name="automatic_stake">Bot</string>
  <string name="manual_stake">Stake</string>
  <string name="setting">Setting</string>
  <string name="amount">Amount</string>
  <string name="fund">Fund</string>
  <string name="stake">Stake</string>
  <string name="preview">preview</string>
  <string name="next">next</string>
  <string name="external">External</string>
  <string name="internal">Internal</string>
  <string name="logo">Logo</string>
  <string name="wallet">Wallet</string>
  <string name="click_the_logo_to_scan_barcode">Click the logo to scan barcode</string>
  <string name="destination_doge">Destination DOGE</string>
  <string name="password_transaction">Password Transaction</string>
  <string name="send_doge">Send DOGE</string>
  <string name="upgrade_to">Upgrade To</string>
  <string name="upgrade_now">Upgrade Now</string>
  <string name="balance">Balance</string>
  <string name="plucky">Plucky</string>
  <string name="lot">LOT (Letter Of Transaction)</string>
  <string name="contact_sponsor">Contact Sponsor</string>
  <string name="download_new_app">Download New App</string>
  <string name="version">version</string>
  <string name="barcode">WALLET</string>
  <string name="doge_chain">Doge Chain</string>
  <string name="phone">Phone</string>
  <string name="attention">Welcome to Plucky Robot doge :</string>
  <string name="description_attention">This robot can generate a minimum of 1% - 3% profit for you and a minimum of 0.5% for your sponsor. But plucky robots can also lose. If the robot does not generate profit doge, then the Plucky system will automatically replace it with a Plucky wallet that you can sell or use for upgrades.</string>
  <string name="game_description">Make sure your internet connection doesn\'t get disconnected in the middle of the game.</string>
  <string name="please_wait">Please wait</string>
  <string name="bot_1">Start Bot 1</string>
  <string name="bot_2">Start Bot 2</string>
  <string name="bot_3">Start Bot 3</string>
  <string name="start_bot_1">Start Bot 1</string>
  <string name="minimum_3000">Min: 10</string>
  <string name="maximum_21000">Max: 99999999</string>
  <string name="stop">Stop</string>
  <string name="continue_text">Continue</string>
</resources>