<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.bot.bot1.Bot1Activity"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@drawable/background">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:background="@color/Link"/>

    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUsername"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:background="@drawable/card_default_2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:background="@color/Link"
          android:textColor="@color/colorAccent"
          android:gravity="center"
          android:text="@string/please_wait"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <ProgressBar
          android:id="@+id/progressBar"
          style="?android:attr/progressBarStyleHorizontal"
          android:progressDrawable="@drawable/progress_bar_line"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:max="10"
          android:progress="0"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_default"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:background="@color/Link"
          android:text="@string/attention"
          android:textColor="@color/textSecondary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <TextView
          android:background="@color/Link"
          android:layout_marginStart="10dp"
          android:text="@string/description_attention"
          android:textColor="@color/textSecondary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <TextView
          android:background="@color/Link"
          android:layout_marginStart="10dp"
          android:text="@string/game_description"
          android:textColor="@color/textSecondary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>