<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_default_2"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:elevation="10dp"
        android:gravity="center">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:srcCompat="@mipmap/ic_launcher_foreground"
          android:id="@+id/imageView"
          android:scaleType="centerCrop"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:contentDescription="@string/icon"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextTextPersonName"
          android:hint="@string/username"
          android:gravity="center"
          android:background="@drawable/edit_text_mode_3"
          android:textColor="@color/colorAccent"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:autofillHints="@string/username"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextTextPassword"
          android:hint="@string/password"
          android:gravity="center"
          android:background="@drawable/edit_text_mode_3"
          android:textColor="@color/colorAccent"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:autofillHints="@string/password"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Button
          android:text="@string/login"
          android:layout_width="200dp"
          android:layout_height="35dp"
          android:id="@+id/buttonLogin"
          android:background="@drawable/button_primary"
          android:textColor="@color/textSecondary"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

  </LinearLayout>

</ScrollView>