<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@drawable/background">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUsername"
        android:layout_margin="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <org.eazegraph.lib.charts.ValueLineChart
        android:id="@+id/cubicLineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:egUseCubic="true"
        app:egUseOverlapFill="true"
        app:egCurveSmoothness="0.4"
        app:egLegendHeight="40dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:background="@drawable/card_default_2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:background="@color/Link"
          android:textColor="@color/colorAccent"
          android:gravity="start"
          android:text="@string/balance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="20dp">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:progressDrawable="@drawable/progress_bar_line"/>

        <TextView
            android:background="@color/Link"
            android:textColor="@color/textSecondary"
            android:textStyle="bold"
            android:text="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:id="@+id/textViewRemainingBalance"/>

      </RelativeLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="5dp"
          android:layout_marginStart="5dp"
          android:layout_marginEnd="5dp">

        <Button
            android:text="@string/continue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonContinue"
            android:layout_weight="1"
            android:background="@drawable/button_success"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="5dp"/>

        <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStop"
            android:layout_weight="1"
            android:background="@drawable/button_danger"
            android:textColor="@color/textSecondary"
            tools:ignore="ButtonStyle"
            android:layout_marginStart="5dp"/>

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_default"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:background="@color/Link"
          android:text="@string/attention"
          android:textColor="@color/textSecondary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <TextView
          android:background="@color/Link"
          android:layout_marginStart="10dp"
          android:text="@string/description_attention"
          android:textColor="@color/textSecondary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <TextView
          android:background="@color/Link"
          android:layout_marginStart="10dp"
          android:text="@string/game_description"
          android:textColor="@color/textSecondary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>