<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ReceivedFragment"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center">

      <ImageButton
          android:src="?attr/actionModeCloseDrawable"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:id="@+id/imageButtonBack"
          android:tint="@color/colorAccent"
          android:backgroundTint="@color/Link"
          android:contentDescription="@string/icon"
          android:scaleType="fitCenter"/>

      <Space
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>

      <ImageView
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:scaleType="centerCrop"
          app:srcCompat="@mipmap/ic_launcher_foreground"
          android:contentDescription="@string/icon"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_default_2"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="25dp">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="300dp"
          app:srcCompat="@mipmap/ic_launcher_foreground"
          android:id="@+id/imageViewQR"
          android:contentDescription="@string/logo"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <TextView
          android:hint="@string/wallet"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/textViewWallet"
          android:gravity="center_vertical"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:drawableTint="@color/colorPrimaryDark"
          app:drawableEndCompat="@drawable/ic_baseline_file_copy"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

  </LinearLayout>

</ScrollView>