<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.bot.BotMenuActivity"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:gravity="center"
    android:background="@drawable/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_margin="10dp"
      tools:ignore="DisableBaselineAlignment,UselessParent">

    <LinearLayout
        android:id="@+id/linearLayoutLot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

      <ImageButton
          android:layout_width="90dp"
          android:layout_height="90dp"
          app:srcCompat="@drawable/bot1"
          android:id="@+id/imageButtonBot1"
          android:backgroundTint="@color/Link"
          android:scaleType="fitCenter"
          tools:ignore="ContentDescription"/>

      <TextView
          android:text="@string/bot_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:textColor="@color/textSecondary"
          android:textSize="12sp"
          android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

      <ImageButton
          android:layout_width="90dp"
          android:layout_height="90dp"
          app:srcCompat="@drawable/bot2"
          android:id="@+id/imageButtonBot2"
          android:backgroundTint="@color/Link"
          android:scaleType="fitCenter"
          tools:ignore="ContentDescription"/>

      <TextView
          android:text="@string/bot_2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:textColor="@color/textSecondary"
          android:textSize="12sp"
          android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

      <ImageButton
          android:layout_width="90dp"
          android:layout_height="90dp"
          app:srcCompat="@drawable/bot3"
          android:id="@+id/imageButtonBot3"
          android:backgroundTint="@color/Link"
          android:scaleType="fitCenter"
          tools:ignore="ContentDescription"/>

      <TextView
          android:text="@string/bot_3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:textColor="@color/textSecondary"
          android:textSize="12sp"
          android:textStyle="bold"/>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>